--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "author": "Patrick GIRY",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "chromedriver": "^2.40.0",
     "cucumber": "^4.2.1",
     "cucumber-pretty": "^1.4.4",
