--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Test nightwatch cucumber",
   "main": "index.js",
   "scripts": {
-    "e2e-test": "nightwatch"
+    "e2e": "npm-run-all e2e-test e2e-report --continue-on-error",
+    "e2e-test": "nightwatch",
+    "e2e-report": "node create-html-report.js"
   },
   "keywords": [
     "Test",
@@ -21,10 +23,12 @@
     "babel-preset-stage-0": "^6.24.1",
     "chromedriver": "^2.40.0",
     "cucumber": "^4.2.1",
+    "cucumber-html-reporter": "^4.0.2",
     "cucumber-pretty": "^1.4.4",
     "geckodriver": "^1.11.0",
     "nightwatch": "^0.9.21",
     "nightwatch-cucumber": "^9.1.2",
+    "npm-run-all": "^4.1.3",
     "phantomjs-prebuilt": "^2.1.16",
     "selenium-server": "^3.12.0"
   }
